test/scc/stmt/semantic-errors/054.t
void test()
{
    switch(10)
    {
        default:
        case 10:
        default:
            break;
    }
}